name:                geode
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              James Earl Douglas
maintainer:          james.douglas@udacity.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable geode
  ghc-options:       -Wall
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base
                     , scotty
                     , aeson
                     , geoip2
                     , iproute
                     , http-types
                     , text
                     , wai
                     , network
                     , exceptions
                     , wai-cors
