name:                geode
synopsis:            Udacity's GeoIP location service
description:
  Geode is a simple web service that returns geographical information about an IP using MaxMind's GeoIP2 City database.
  .
  Geode can look up a specific IP or the IP associated with the request. In the latter case, it honors Berlioz's
  X-Forwarded-For header if present.
  .
  See the readme in the Git repository for more details.
homepage:            https://github.com/udacity/geode
version:             0.1.0.2
license:             ISC
license-file:        LICENSE
author:              James Earl Douglas
maintainer:          owen@udacity.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable geode
  ghc-options:       -Wall
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base
                     , scotty
                     , aeson
                     , geoip2 >= 0.3.0.0
                     , iproute
                     , http-types
                     , text
                     , wai
                     , network
                     , exceptions
                     , wai-cors
